# pdfextbook

./: LICENSE  README.md  pdf_extbook  pyproject.toml
pdfextbook/: __init__.py  pdfextbook.py
